[package]
name = "network-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.19", features = ["derive"] }
headless_chrome = "1.0.5"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
statsd = "0.16.0"
reqwest = { version = "0.11.18", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
component = "0.1.0"
rust-analyzer = "0.0.1"
ssh2 = "0.9.4"
